2005-07-29  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added "Virtual Hosts" page

2005-07-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_router.erl: Added filter_packet hook

2005-07-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/jd2ejd.erl: Updated to work with ODBC

	* src/mod_roster_odbc.erl: Updated

2005-07-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline_odbc.erl: Bugfix

	* src/mod_last_odbc.erl: Bugfix

2005-07-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_pubsub/mod_pubsub.erl: Updated to J-EAI version

2005-07-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/acl.erl: Slightly changed "access" option processing

	* src/mod_disco.erl: Fixed processing of host features and
	extra_domains option

	* src/ejabberd_c2s.erl: Processing of jabber:iq:register totally
	moved to mod_register.erl (thanks to Sergei Golovan)
	* src/mod_register.erl: Likewise

	* src/win32/ejabberd.nsi: Added two pictures in installer (thanks
	to Maxim Ryazanov)
	* src/win32/ejabberd_header.bmp: Likewise
	* src/win32/ejabberd_intro.bmp: Likewise

	* src/web/ejabberd_web_admin.erl: Fixed spelling of word
	"authentication"
	* src/ejabberd_c2s.erl: Likewise

2005-07-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_register.erl: Bugfix

	* src/mod_vcard.erl: Bugfix

	* src/ejabberd_app.erl: Updated to allow different authentication
	methods for different virtual hosts
	* src/ejabberd_auth.erl: Likewise
	* src/ejabberd_auth_external.erl: Likewise
	* src/ejabberd_auth_internal.erl: Likewise
	* src/ejabberd_auth_ldap.erl: Likewise
	* src/ejabberd_auth_odbc.erl: Likewise
	* src/cyrsasl.erl: Likewise
	* src/cyrsasl_digest.erl: Likewise
	* src/cyrsasl_plain.erl: Likewise
	* src/ejabberd_c2s.erl: Likewise
	* src/ejabberd_config.erl: Likewise
	* src/extauth.erl: Likewise
	* src/mod_last_odbc.erl: Likewise
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_roster_odbc.erl: Likewise
	* src/odbc/ejabberd_odbc.erl: Likewise