@@ -1,3 +1,8 @@
+2005-07-31  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/web/ejabberd_web_admin.erl: Fixed CSS style sheet to be
+	standards compliant (thanks to Sander Devrieze)
+
 2005-07-29  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/web/ejabberd_web_admin.erl: Added "Virtual Hosts" page
